use sequenced collection methods (#359)